# enterprise-erp

./: .env.example  README.md  _erd18_draft_raw.txt  package-lock.json
apps/api/: pyproject.toml
apps/api/alembic/: env.py  helpers.py
apps/api/alembic/versions/: 0115_create_quality_schema.py  0116_qm_sampling_plan.py  0117_qm_defect_type.py  0118_qm_inspection_plan.py  0119_qm_quality_char.py  0120_qm_incoming_insp.py  0121_qm_incoming_insp_line.py  0122_qm_inprocess_insp.py  0123_qm_final_inspection.py  0124_qm_defect.py  0125_qm_ncr.py  0126_qm_capa.py  0127_qm_root_cause.py  0128_qm_corrective_action.py  0129_qm_preventive_action.py  0130_qm_supplier_quality.py  0131_qm_customer_complaint.py  0132_qm_quality_audit.py  0133_qm_quality_score.py  0134_seed_qm_permissions.py  0135_seed_qm_workflows.py  0136_create_crm_schema.py  0137_crm_lead_source.py  0138_crm_pipeline.py  0139_crm_campaign.py  0140_crm_lead.py  0141_crm_lead_assignment.py  0142_crm_lead_activity.py  0143_crm_opportunity.py  0144_crm_opportunity_stage.py  0145_crm_campaign_member.py  0146_crm_interaction.py  0147_crm_task.py  0148_crm_followup.py  0149_crm_meeting.py  0150_crm_call_log.py  0151_crm_email_log.py  0152_crm_visit_log.py  0153_crm_customer_feedback.py  0154_crm_customer_satisfaction.py  (+125 more)
apps/api/scripts/: _finalize_portal_gen.py  _fix_portal_models.py  _gen_analytics_module.py  _gen_document_module.py  _gen_grc_module.py  _gen_helpdesk_module.py  _gen_portal_module.py  _inject_portal_data.py  _patch_portal_gen.py  expand_response_schemas.py  seed_all_permissions.py  seed_demo_data.py  seed_demo_modules.py  seed_remaining_gaps.py  seed_sales_crm_demo.py
apps/api/src/core/: config.py  redis.py
apps/api/src/modules/analytics/: __init__.py  dependencies.py  permissions.py  router.py  schemas.py  tasks.py
apps/api/src/modules/analytics/adapters/: __init__.py  finance_read_port.py  master_data_port.py  organization_port.py
apps/api/src/modules/analytics/domain/: __init__.py  entities.py  enums.py  exceptions.py  value_objects.py
apps/api/src/modules/analytics/models/: __init__.py  alert_notification.py  alert_rule.py  dashboard.py  dashboard_widget.py  data_export.py  data_import.py  data_refresh.py  data_snapshot.py  dataset.py  dataset_source.py  dimension.py  fact_table.py  kpi.py  metric.py  mixins.py  query_history.py  report.py  report_execution.py  report_schedule.py  subscription.py  usage_audit.py
apps/api/src/modules/analytics/repository/: alert_notification_repository.py  alert_rule_repository.py  base.py  code_sequence_repository.py  dashboard_repository.py  dashboard_widget_repository.py  data_export_repository.py  data_import_repository.py  data_refresh_repository.py  data_snapshot_repository.py  dataset_repository.py  dataset_source_repository.py  dimension_repository.py  fact_table_repository.py  kpi_repository.py  metric_repository.py  query_history_repository.py  report_execution_repository.py  report_repository.py  report_schedule_repository.py  subscription_repository.py  usage_audit_repository.py
apps/api/src/modules/asset/: schemas.py
apps/api/src/modules/crm/: dependencies.py  permissions.py  router.py  schemas.py  tasks.py
apps/api/src/modules/document/: __init__.py  dependencies.py  permissions.py  router.py  schemas.py  tasks.py
apps/api/src/modules/ecommerce/: schemas.py
apps/api/src/modules/finance/: dependencies.py  schemas.py
apps/api/src/modules/foundation/: dependencies.py  schemas.py
apps/api/src/modules/grc/: __init__.py  dependencies.py  permissions.py  router.py  schemas.py  tasks.py
apps/api/src/modules/helpdesk/: __init__.py  dependencies.py  permissions.py  router.py  schemas.py  tasks.py
apps/api/src/modules/hr/: schemas.py
apps/api/src/modules/integration/: schemas.py
apps/api/src/modules/inventory/: schemas.py
apps/api/src/modules/manufacturing/: schemas.py
apps/api/src/modules/payroll/: schemas.py
apps/api/src/modules/portal/: __init__.py  dependencies.py  permissions.py  router.py  schemas.py  tasks.py
apps/api/src/modules/procurement/: router.py  schemas.py
apps/api/src/modules/project/: schemas.py
apps/api/src/modules/quality/: __init__.py  dependencies.py  permissions.py  router.py  schemas.py  tasks.py
apps/api/src/modules/recruitment/: schemas.py
apps/api/src/modules/service/: schemas.py
apps/api/src/shared/: router.py
apps/api/src/tests/security/: test_auth_security.py
apps/api/src/workers/: celery_app.py
(+1140 files in other folders)
